# docs-test

./: .gitignore  README.md  _terms.yml  main.py  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
_static/: custom.css
content/: _template.md  glossary.md  index.md  xbol.md
content/appendices/: diagrams.md  dynamic-pricing.md  index.md
content/architecture/: cicd.md  context.md  deployment.md  index.md  inventory.md  scaling.md
content/software/: ai-usage.md  api-documentation.md  dotnet-best-practices.md  dotnet-guidelines.md  react-best-practices.md  twelve-factor.md
diagrams/: component-admin-api.mmd  component-admin-portal.mmd  component-api-template.mmd  component-client-api.mmd  component-client-web.mmd  component-identity.mmd  component-notifications.mmd  component-payments.mmd  component-ticketing.mmd  context.mmd  deployment.mmd
diagrams/src/: Bastion 1 - Happy Path.mmd  Bastion 2 - Bastion Crash.mmd  Bastion 3 - Replay o Clonacion.mmd  Bastion 4 - Bottleneck.mmd  Diagrama de Componentes v2.mmd  Diagrama de actividades Consumo API REST.mmd  Diagrama de actividades compra en taquilla.mmd  Diagrama de actividades compra online.mmd  Diagrama de secuencia reserva.mmd  Reserva Credito.mmd  Reserva Palcos.mmd  Reserva Renovacion Xolopass.mmd  Reserva Venta General Pago Diferido.mmd  Reserva Venta General Pago Inmediato.mmd  Reserva Venta General.mmd  Reserva Venta Xolopass.mmd  Reserva Xolopases.mmd  cache-aside.mmd  cicd.mmd  component-admin-api.mmd  component-admin-portal.mmd  component-api-template.mmd  context.mmd  (+12 more)
scripts/: render_diagrams.py
(+25 files in other folders)
